# AdventOfCode2021

./: .codecov.yml  .travis.yml  CMakeLists.txt  README.md  run.cmd.in
.github/workflows/: build-and-test-macos.yml  build-and-test-windows.yml  build-and-test.yml
01/: CMakeLists.txt  advent01.cpp  sonar_sweep.cpp  sonar_sweep.hpp  sonar_sweep.t.cpp
02/: CMakeLists.txt  advent02.cpp  dive.cpp  dive.hpp  dive.t.cpp
03/: CMakeLists.txt  advent03.cpp  binary_diagnostic.cpp  binary_diagnostic.hpp  binary_diagnostic.t.cpp
04/: CMakeLists.txt  advent04.cpp  giant_squid.cpp  giant_squid.hpp  giant_squid.t.cpp
05/: CMakeLists.txt  advent05.cpp  hydrothermal_venture.cpp  hydrothermal_venture.hpp  hydrothermal_venture.t.cpp
06/: CMakeLists.txt  advent06.cpp  lanternfish.cpp  lanternfish.hpp  lanternfish.t.cpp
07/: CMakeLists.txt  advent07.cpp  treachery_of_whales.cpp  treachery_of_whales.hpp  treachery_of_whales.t.cpp
08/: CMakeLists.txt  advent08.cpp  seven_segment_search.cpp  seven_segment_search.hpp  seven_segment_search.t.cpp
09/: CMakeLists.txt  advent09.cpp  smoke_basin.cpp  smoke_basin.hpp  smoke_basin.t.cpp
10/: CMakeLists.txt  advent10.cpp  syntax_scoring.cpp  syntax_scoring.hpp  syntax_scoring.t.cpp
11/: CMakeLists.txt  advent11.cpp  dumbo_octopus.cpp  dumbo_octopus.hpp  dumbo_octopus.t.cpp
12/: CMakeLists.txt  advent12.cpp  passage_pathing.cpp  passage_pathing.hpp  passage_pathing.t.cpp
13/: CMakeLists.txt  advent13.cpp  transparent_origami.cpp  transparent_origami.hpp  transparent_origami.t.cpp
14/: CMakeLists.txt  advent14.cpp  extended_polymerization.cpp  extended_polymerization.hpp  extended_polymerization.t.cpp
15/: CMakeLists.txt  advent15.cpp  chiton.cpp  chiton.hpp  chiton.t.cpp
16/: CMakeLists.txt  advent16.cpp  packet_decoder.cpp  packet_decoder.hpp  packet_decoder.t.cpp
17/: CMakeLists.txt  advent17.cpp  trick_shot.cpp  trick_shot.hpp  trick_shot.t.cpp
18/: CMakeLists.txt  advent18.cpp  snailfish.cpp  snailfish.hpp  snailfish.t.cpp
19/: CMakeLists.txt  advent19.cpp  beacon_scanner.cpp  beacon_scanner.hpp  beacon_scanner.t.cpp
20/: CMakeLists.txt  advent20.cpp  trench_map.cpp  trench_map.hpp  trench_map.t.cpp
21/: CMakeLists.txt  advent21.cpp  dirac_dice.cpp  dirac_dice.hpp  dirac_dice.t.cpp
22/: CMakeLists.txt  advent22.cpp  reactor_reboot.cpp  reactor_reboot.hpp  reactor_reboot.t.cpp
25/: CMakeLists.txt  advent25.cpp  sea_cucumber.cpp  sea_cucumber.hpp  sea_cucumber.t.cpp
